manifests/111/deployment.main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercise-main-111
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exercise-main-111
  template:
    metadata:
      labels:
        app: exercise-main-111
    spec:
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: exercise-111-claim
      containers:
        - name: reader
          image: pasiol/go-main-app2-reader:1.11
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-data
            mountPath: /var/app/pvc
        - name: writer
          image: pasiol/go-main-app2-writer:1.11
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-data
            mountPath: /var/app/pvc
