manifests/111/deployment.pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercise-pingpong-111
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exercise-pingpong-111
  template:
    metadata:
      labels:
        app: exercise-pingpong-111
    spec:
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: exercise-111-claim
      containers:
        - name: pingpong
          image: pasiol/go-pingpong:1.11
          volumeMounts:
          - name: shared-data
            mountPath: /var/app/pvc
