manifests/111/service.main.yaml
apiVersion: v1
kind: Service
metadata:
  name: exercise-111-main-svc
spec:
  type: ClusterIP
  selector:
    app: exercise-main-111
  ports:
    - port: 3030
      protocol: TCP
      targetPort: 3000
