manifests/111/service.pingpong.yaml
apiVersion: v1
kind: Service
metadata:
  name: exercise-111-pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: exercise-pingpong-111
  ports:
    - port: 3031
      protocol: TCP
      targetPort: 3001
